# meds-open-prompts

./: .gitignore  Makefile  README.md  pyproject.toml
medsop/: atc.py  drug_reviews.py  file_utils.py  settings.py
tests/: test_atc.py  test_drug_reviews.py  test_meds_open_prompts.py
