[tool.poetry]
name = "medsop"
version = "0.1.0"
description = ""
authors = ["Michael Nossal <mikenossal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
openprompt = "^1.0.1"
loguru = "^0.6.0"
pydantic = "^1.10.2"
typer = "^0.7.0"
pymongo = "^4.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
autoflake = "^2.0.0"
mypy = "^0.991"
coverage = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
